--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,10 @@
         <title>PlusOuMoin</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="anim.js"></script>
+        <link rel="stylesheet" href="style.css"/>
     </head>
-    <body onload="come()">
+    <body>
+        <button  onclick="main(10 , 20)">play</button>
     </body>
 </html>
